checking in korean alphabet lessons

--- a/index.html
+++ b/index.html
@@ -188,6 +188,12 @@
     <div id="basics" class="panel-collapse collapse">
         <div class="panel-body">
             <ul class="nav">
+                <li><a href="#grammar/alphabet-1">Hangeul part 1</a></li>
+                <li><a href="#grammar/alphabet-2">Hangeul part 2</a></li>
+                <li><a href="#grammar/alphabet-3">Hangeul part 3</a></li>
+                <li><a href="#grammar/alphabet-4">Hangeul part 4</a></li>
+                <li><a href="#grammar/alphabet-5">Hangeul part 5</a></li>
+                <li><a href="#grammar/alphabet-6">Hangeul part 6</a></li>
                 <li><a href="#grammar/topic">은/는 (topic)</a></li>
                 <li><a href="#grammar/subject">이/가 (subject)</a></li>
                 <li><a href="#">을/를 (object)</a></li>
