optimizing for tablet

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="row">
         <div id="sidebar"></div>
         <!--/span-->
-        <article id="lesson-content" class="col-sm-6">
+        <article id="lesson-content" class="col-md-6">
             <div id="content-holder">
             </div>
             <div id="word-holder">
