--- a/index.html
+++ b/index.html
@@ -131,11 +131,13 @@
                                 <li><a href="#vocab/words-adjective-basic">Basic Adjectives</a></li>
                                 <li><a href="#vocab/words-other-basic">Additional Basic Vocab</a></li>
                                 <li><a href="#vocab/numbers">Numbers</a></li>
+                                <li><a href="#vocab/colors">Colors</a></li>
                                 <li><a href="#vocab/interrogative">Who,what,when,where,why,how</a></li>
                                 <li><a href="#vocab/time">Time,Frequency</a></li>
                                 <li><a href="#vocab/emphasis">Emphasis</a></li>
                                 <li><a href="#vocab/food">Food</a></li>
                                 <li><a href="#vocab/travel">Travel</a></li>
+                                <li><a href="#vocab/work">Work,Study</a></li>
                                 <li><a href="#vocab/furniture">Furniture</a></li>
                                 <li><a href="#vocab/animals">Animals</a></li>
                                 <li><a href="#vocab/hobbies">Hobbies</a></li>
