--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <title>Teach me Korean</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="A site for learning Korean vocabulary and grammar">
+    <meta name="keywords" content="Korean,learn,study,teach,vocabulary,grammar,guide,lesson,tutorial,alphabet,structure">
+    <meta name="author" content="Tong Zou">
+    <meta name="fragment" content="!">
 
     <!-- Le styles -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -67,15 +69,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Teach me Korean</a>
+        <a class="navbar-brand" href="#!">Teach me Korean</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="header-collapse">
         <ul class="nav navbar-nav">
-            <li><a class="home" href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a class="home" href="#!">Home</a></li>
+            <li><a href="#!/about">About</a></li>
+            <li><a href="#!/contact">Contact</a></li>
         </ul>
     </div>
     <!-- /.navbar-collapse -->
@@ -98,26 +100,26 @@
     <div id="level1" class="panel-collapse collapse">
         <div class="panel-body">
             <ul class="nav">
-                <li><a class="alphabet-1" href="#lesson/level1/alphabet-1">Korean alphabet part 1</a></li>
-                <li><a class="alphabet-2" href="#lesson/level1/alphabet-2">Korean alphabet part 2</a></li>
-                <li><a class="alphabet-3" href="#lesson/level1/alphabet-3">Korean alphabet part 3</a></li>
-                <li><a class="alphabet-4" href="#lesson/level1/alphabet-4">Korean alphabet part 4</a></li>
-                <li><a class="alphabet-5" href="#lesson/level1/alphabet-5">Korean alphabet part 5</a></li>
-                <li><a class="alphabet-6" href="#lesson/level1/alphabet-6">Korean alphabet part 6</a></li>
-                <li><a class="expressions-basic" href="#lesson/level1/expressions-basic">Basic Expressions</a></li>
-                <li><a class="words-other-basic" href="#lesson/level1/words-other-basic">Basic Korean Terms</a></li>
-                <li><a class="tobe" href="#lesson/level1/tobe">이다 (to be)</a></li>
-                <li><a class="topic" href="#lesson/level1/topic">은/는 (topic)</a></li>
-                <li><a class="tohave" href="#lesson/level1/tohave">있다,없다 (to have,to exist)</a></li>
-                <li><a class="towant" href="#lesson/level1/towant">고 싶다 (to want)</a></li>
-                <li><a class="words-noun-basic" href="#lesson/level1/words-noun-basic">Basic Nouns</a></li>
-                <li><a class="words-verb-basic" href="#lesson/level1/words-verb-basic">Basic Verbs</a></li>
-                <li><a class="numbers" href="#lesson/level1/numbers">Numbers</a></li>
-                <li><a class="present" href="#lesson/level1/present">아/어/여 (present tense)</a></li>
-                <li><a class="past" href="#lesson/level1/past">았/었/였 (past tense)</a></li>
-                <li><a class="request" href="#lesson/level1/request">주다 (request)</a></li>
-                <li><a class="location" href="#lesson/level1/location">에,에서 (location, time)</a></li>
-                <li><a class="negation" href="#lesson/level1/negation">안,지 않다 (negation)</a></li>
+                <li><a class="alphabet-1" href="#!/lesson/level1/alphabet-1">Korean alphabet part 1</a></li>
+                <li><a class="alphabet-2" href="#!/lesson/level1/alphabet-2">Korean alphabet part 2</a></li>
+                <li><a class="alphabet-3" href="#!/lesson/level1/alphabet-3">Korean alphabet part 3</a></li>
+                <li><a class="alphabet-4" href="#!/lesson/level1/alphabet-4">Korean alphabet part 4</a></li>
+                <li><a class="alphabet-5" href="#!/lesson/level1/alphabet-5">Korean alphabet part 5</a></li>
+                <li><a class="alphabet-6" href="#!/lesson/level1/alphabet-6">Korean alphabet part 6</a></li>
+                <li><a class="expressions-basic" href="#!/lesson/level1/expressions-basic">Basic Expressions</a></li>
+                <li><a class="words-other-basic" href="#!/lesson/level1/words-other-basic">Basic Korean Terms</a></li>
+                <li><a class="tobe" href="#!/lesson/level1/tobe">이다 (to be)</a></li>
+                <li><a class="topic" href="#!/lesson/level1/topic">은/는 (topic)</a></li>
+                <li><a class="tohave" href="#!/lesson/level1/tohave">있다,없다 (to have,to exist)</a></li>
+                <li><a class="towant" href="#!/lesson/level1/towant">고 싶다 (to want)</a></li>
+                <li><a class="words-noun-basic" href="#!/lesson/level1/words-noun-basic">Basic Nouns</a></li>
+                <li><a class="words-verb-basic" href="#!/lesson/level1/words-verb-basic">Basic Verbs</a></li>
+                <li><a class="numbers" href="#!/lesson/level1/numbers">Numbers</a></li>
+                <li><a class="present" href="#!/lesson/level1/present">아/어/여 (present tense)</a></li>
+                <li><a class="past" href="#!/lesson/level1/past">았/었/였 (past tense)</a></li>
+                <li><a class="request" href="#!/lesson/level1/request">주다 (request)</a></li>
+                <li><a class="location" href="#!/lesson/level1/location">에,에서 (location, time)</a></li>
+                <li><a class="negation" href="#!/lesson/level1/negation">안,지 않다 (negation)</a></li>
             </ul>
         </div>
     </div>
@@ -133,26 +135,26 @@
     <div id="level2" class="panel-collapse collapse">
         <div class="panel-body">
             <ul class="nav">
-                <li><a class="interrogative" href="#lesson/level2/interrogative">Who,what,when,where,why,how</a></li>
-                <li><a class="fromto" href="#lesson/level2/fromto">에서,부터,까지 (from, to)</a></li>
-                <li><a class="future" href="#lesson/level2/future">ㄹ거예요 (future tense)</a></li>
-                <li><a class="subject" href="#lesson/level2/subject">이/가 (subject)</a></li>
-                <li><a class="object" href="#lesson/level2/object">을/를 (object)</a></li>
-                <li><a class="words-conjunctions" href="#lesson/level2/words-conjunctions">Conjunctions</a></li>
-                <li><a class="and" href="#lesson/level2/and">와/과,하고,(이)랑 (and,with)</a></li>
-                <li><a class="time" href="#lesson/level2/time">Time</a></li>
-                <li><a class="fromto-person" href="#lesson/level2/fromto-person">한테(서),에게(서),께 (from, to) a person</a></li>
-                <li><a class="counters" href="#lesson/level2/counters">Counters</a></li>
-                <li><a class="progressive" href="#lesson/level2/progressive">고 있다 (Present Progressive Tense)</a></li>
-                <li><a class="also" href="#lesson/level2/also">도 (also, too)</a></li>
-                <li><a class="only" href="#lesson/level2/only">만 (only)</a></li>
-                <li><a class="frequency" href="#lesson/level2/frequency">Frequency,Emphasis</a></li>
-                <li><a class="can" href="#lesson/level2/can">ㄹ 수 있다/없다,못 (can do,can't do)</a></li>
-                <li><a class="verb-noun" href="#lesson/level2/verb-noun">기,는 것,(으)ㅁ (verb into noun)</a></li>
-                <li><a class="should" href="#lesson/level2/should">(아/어/여 야)되다/하다 (must,should)</a></li>
-                <li><a class="if" href="#lesson/level2/if">(으)면 (if)</a></li>
-                <li><a class="honorific" href="#lesson/level2/honorific">(으)시 (honorific particle)</a></li>
-                <li><a class="honorific-form" href="#lesson/level2/honorific-form">(ㅂ/습)니다 (honorific form)</a></li>
+                <li><a class="interrogative" href="#!/lesson/level2/interrogative">Who,what,when,where,why,how</a></li>
+                <li><a class="fromto" href="#!/lesson/level2/fromto">에서,부터,까지 (from, to)</a></li>
+                <li><a class="future" href="#!/lesson/level2/future">ㄹ거예요 (future tense)</a></li>
+                <li><a class="subject" href="#!/lesson/level2/subject">이/가 (subject)</a></li>
+                <li><a class="object" href="#!/lesson/level2/object">을/를 (object)</a></li>
+                <li><a class="words-conjunctions" href="#!/lesson/level2/words-conjunctions">Conjunctions</a></li>
+                <li><a class="and" href="#!/lesson/level2/and">와/과,하고,(이)랑 (and,with)</a></li>
+                <li><a class="time" href="#!/lesson/level2/time">Time</a></li>
+                <li><a class="fromto-person" href="#!/lesson/level2/fromto-person">한테(서),에게(서),께 (from, to) a person</a></li>
+                <li><a class="counters" href="#!/lesson/level2/counters">Counters</a></li>
+                <li><a class="progressive" href="#!/lesson/level2/progressive">고 있다 (Present Progressive Tense)</a></li>
+                <li><a class="also" href="#!/lesson/level2/also">도 (also, too)</a></li>
+                <li><a class="only" href="#!/lesson/level2/only">만 (only)</a></li>
+                <li><a class="frequency" href="#!/lesson/level2/frequency">Frequency,Emphasis</a></li>
+                <li><a class="can" href="#!/lesson/level2/can">ㄹ 수 있다/없다,못 (can do,can't do)</a></li>
+                <li><a class="verb-noun" href="#!/lesson/level2/verb-noun">기,는 것,(으)ㅁ (verb into noun)</a></li>
+                <li><a class="should" href="#!/lesson/level2/should">(아/어/여 야)되다/하다 (must,should)</a></li>
+                <li><a class="if" href="#!/lesson/level2/if">(으)면 (if)</a></li>
+                <li><a class="honorific" href="#!/lesson/level2/honorific">(으)시 (honorific particle)</a></li>
+                <li><a class="honorific-form" href="#!/lesson/level2/honorific-form">(ㅂ/습)니다 (honorific form)</a></li>
             </ul>
         </div>
     </div>
@@ -175,6 +177,7 @@
         </div>
     </div>
 </div>
+<!--
 <div class="panel panel-default">
     <div class="panel-heading">
         <h4 class="panel-title">
@@ -503,11 +506,7 @@
         </div>
     </div>
 </div>
-</div>
-
-</div>
-</div>
-</div>
+-->
 </div>
 </script>
 
