finishing up level 2

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <ul class="nav">
                 <li><a class="interrogative" href="#!/lesson/level2/interrogative">Who,what,when,where,why,how</a></li>
                 <li><a class="fromto" href="#!/lesson/level2/fromto">에서,부터,까지 (from, to)</a></li>
-                <li><a class="future" href="#!/lesson/level2/future">ㄹ거예요 (future tense)</a></li>
+                <li><a class="future" href="#!/lesson/level2/future">(ㄹ/을)거예요 (future tense)</a></li>
                 <li><a class="subject" href="#!/lesson/level2/subject">이/가 (subject)</a></li>
                 <li><a class="object" href="#!/lesson/level2/object">을/를 (object)</a></li>
                 <li><a class="words-conjunctions" href="#!/lesson/level2/words-conjunctions">Conjunctions</a></li>
@@ -149,11 +149,11 @@
                 <li><a class="also" href="#!/lesson/level2/also">도 (also, too)</a></li>
                 <li><a class="only" href="#!/lesson/level2/only">만 (only)</a></li>
                 <li><a class="frequency" href="#!/lesson/level2/frequency">Frequency,Emphasis</a></li>
-                <li><a class="can" href="#!/lesson/level2/can">ㄹ 수 있다/없다,못 (can do,can't do)</a></li>
-                <li><a class="verb-noun" href="#!/lesson/level2/verb-noun">기,는 것,(으)ㅁ (verb into noun)</a></li>
-                <li><a class="should" href="#!/lesson/level2/should">(아/어/여 야)되다/하다 (must,should)</a></li>
-                <li><a class="if" href="#!/lesson/level2/if">(으)면 (if)</a></li>
+                <li><a class="can" href="#!/lesson/level2/can">(ㄹ/을) 수 있다/없다,못 (can do,can't do)</a></li>
+                <li><a class="should" href="#!/lesson/level2/should">(아/어/여 야)되다/하다 (must do,should do)</a></li>
+                <li><a class="if" href="#!/lesson/level2/if">(으)면 (if,when)</a></li>
                 <li><a class="honorific" href="#!/lesson/level2/honorific">(으)시 (honorific particle)</a></li>
+                <li><a class="stop" href="#lesson/level2/stop">마세요,말고 (stop doing)</a></li>
                 <li><a class="honorific-form" href="#!/lesson/level2/honorific-form">(ㅂ/습)니다 (honorific form)</a></li>
             </ul>
         </div>
@@ -170,9 +170,9 @@
     <div id="level3" class="panel-collapse collapse">
         <div class="panel-body">
             <ul class="nav">
+                <li><a class="verb-noun" href="#!/lesson/level3/verb-noun">기,는 것,(으)ㅁ (verb into noun)</a></li>
                 <li><a class="comparison" href="#lesson/level3/comparison">보다,비해서 (comparison)</a></li>
                 <li><a class="by" href="#lesson/level3/by">(으)로 (by,with,direction)</a></li>
-                <li><a class="stop" href="#lesson/level3/stop">마세요,말고 (stop doing)</a></li>
             </ul>
         </div>
     </div>
