adding about and contact sections

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     <div class="collapse navbar-collapse" id="header-collapse">
         <ul class="nav navbar-nav">
             <li><a class="home" href="#!">Home</a></li>
-            <li><a href="#!/about">About</a></li>
-            <li><a href="#!/contact">Contact</a></li>
+            <li><a class="about" href="#!/about">About</a></li>
+            <li><a class="contact" href="#!/contact">Contact</a></li>
         </ul>
     </div>
     <!-- /.navbar-collapse -->
